Refactor YouTube and Groq API integration; update index.html to reflect new script paths

--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
     <script src="js/utils/storage.js"></script>
     <script src="js/utils/animations.js"></script>
     <script src="js/utils/model.js"></script>
-    <script src="js/client/youtube-client.js"></script>
-    <script src="js/client/groq-client.js"></script>
+    <script src="js/client/youtube.js"></script>
+    <script src="js/client/groq.js"></script>
     <script src="js/components/onboarding.js"></script>
     <script src="js/components/video-player.js"></script>
     <script src="js/components/chat-assistant.js"></script>
